<resources>
    <string name="app_name">Week Nine - Json Placeholder API</string>
    <string name="first_implementation">First implementation</string>
    <string name="second_implementation">Second implementation</string>
    <string name="post">dignissimos aperiam dolorem qui eum facilis quibusdam animi sint suscipit qui sint possimus cum quaerat magni maiores excepturi ipsam ut commodi dolor voluptatum modi aut vitae</string>
    <string name="profile_image">Profile image</string>
    <string name="kufre_udoh">Kufre Udoh</string>
    <string name="software_engineer_at_google">Software Engineer at Google</string>
    <string name="_14h">5h</string>
    <string name="post_privacy">Post privacy</string>
    <string name="like_icon">Like icon</string>
    <string name="_25">25</string>
    <string name="comments">comments</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="chinenye">Chinenye Ikpa</string>
    <string name="chinenye_bio">Senior Android Engineer at Amazon</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="postapp">PostApp</string>
    <string name="filter">Filter</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="live">Live</string>
    <string name="photo">Photo</string>
    <string name="room">Room</string>
    <string name="make_post">Post</string>
    <string name="_5">5</string>
    <string name="peter_akam">Peter Akam</string>
    <string name="peter_bio">CEO at Facebook</string>
    <string name="benjamin_obetta">Benjamin Obetta</string>
    <string name="benjamin_bio">JavaScript Developer</string>
    <string name="anthony_idoko">Anthony Idoko</string>
    <string name="anthony_bio">Android Developer at Pako.com</string>
    <string name="johnson_oyesina">Johnson Oyesina</string>
    <string name="johnson_bio">DevOps Engineer at LinkedIn</string>
    <string name="emmanuel_oruminighen">Emmanuel Oruminighen</string>
    <string name="emmanuel_bio">Lead Software Engineer at Google</string>
    <string name="john_doe">John Doe</string>
    <string name="john_bio">AWS Engineer at Microsoft</string>
    <string name="jennifer_santos">Jennifer Santos</string>
    <string name="jennifer_bio">Junior Web Developer at Tesla</string>
    <string name="joe_davids">Joe Davids</string>
    <string name="john_davids_bio">Software Developer | React Native</string>
    <string name="cassidy_banks">Cassidy Banks</string>
    <string name="cassidey_bio">UI/UX Engineer at Flutterwave</string>
    <string name="leave_your_comments_here">Leave your comments here…</string>
    <string name="comment">Comment</string>
    <string name="_comment">comment</string>
    <string name="_comments">Comments</string>
    <string name="my_profile_image">My profile image</string>
    <string name="few_moments_ago">few moments ago</string>
    <string name="mvc_implementation">MVC Implementation</string>
    <string name="mvvm_implementation">MVVM Implementation</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="_post">Post</string>
    <string name="loading_comments">Loading comments…</string>
    <string name="loading_posts">Loading posts</string>
    <string name="tolu_longe">Tolulope Longe</string>
    <string name="mohammad_obaalasaki">Mohammad Obaalasaki</string>
    <string name="ruth_roberts">Ruth Roberts</string>
    <string name="jude_jonathan">Jude Jonathan</string>
    <string name="joseph_okezie">Joseph Okezie</string>
    <string name="samuel_ochuba">Samuel Ochuba</string>
    <string name="osehiase_ehilen">Osehiase Ehilen</string>
    <string name="godday_okoduwa">Godday Okoduwa</string>
    <string name="cassidy">Cassidy Banks</string>
    <string name="peter">Peter Akam</string>
    <string name="peter_mail">peter.akam@decagon.dev</string>
    <string name="ben">Benjamin Obetta</string>
    <string name="ben_mail">benjamin.obetta@decagon.dev</string>
    <string name="tony">Anthony Idoko</string>
    <string name="tony_mail">anthony.idoko@decagon.dev</string>
    <string name="johnson">Johnson Oyesina</string>
    <string name="johnson_mail">johnson.oyesina@decagon.dev</string>
    <string name="emmanuel">Emmanuel Oruminighen</string>
    <string name="emmanuel_mail">emmanuel.oruminighen@decagon.dev</string>
    <string name="john">John Doe</string>
    <string name="john_mail">john.doe@decagon.dev</string>
    <string name="chinenye_email">chinenye.ikpa@decagon.dev</string>
    <string name="jennifer">Jennifer Santos</string>
    <string name="jennifer_mail">jennifer.santos@decagon.dev</string>
    <string name="joe">Joe Davids</string>
    <string name="joe_mail">joe.davids@decagon.dev</string>
    <string name="cassidy_mail">cassidy.banks@decagon.dev</string>
    <string name="kufre_email">kufreabasi.udoh@decagon.dev</string>
    <string name="profile_image_desc">profile image</string>
    <string name="reply">Reply</string>
    <string name="connection_lost">Connection lost</string>
    <string name="we_ll_reload_the_page_as_soon_as_connection_is_restored">We\'ll reload the page as soon as connection is restored</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_restored">Connection restored!</string>
</resources>