<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_of_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_name">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/my_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name"
        style="@style/PostBodyText.NameText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_bio"
        style="@style/PostBodyText.BioText"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/time_of_post"
        style="@style/LikesAndCommentsTexts.TimePosted"
        app:layout_constraintStart_toStartOf="@+id/profile_bio"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio" />

    <ImageView
        android:id="@+id/post_privacy"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/post_privacy"
        app:layout_constraintBottom_toBottomOf="@+id/time_of_post"
        app:layout_constraintStart_toEndOf="@+id/time_of_post"
        app:layout_constraintTop_toTopOf="@+id/time_of_post"
        app:srcCompat="@drawable/ic_baseline_group_work_24" />

    <TextView
        android:id="@+id/post_body"
        style="@style/PostBodyText"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_bio"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/time_of_post" />

    <ImageView
        android:id="@+id/like_icon"
        style="@style/LikeIcon"
        app:layout_constraintBottom_toBottomOf="@+id/number_of_likes"
        app:layout_constraintStart_toStartOf="@+id/post_body"
        app:layout_constraintTop_toTopOf="@+id/number_of_likes"
        android:contentDescription="@string/like_icon" />

    <TextView
        android:id="@+id/number_of_likes"
        style="@style/LikesAndCommentsTexts"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:text="@string/_25"
        app:layout_constraintStart_toEndOf="@+id/like_icon"
        app:layout_constraintTop_toBottomOf="@+id/post_body" />

    <TextView
        android:id="@+id/number_of_comments"
        style="@style/LikesAndCommentsTexts"
        android:layout_marginEnd="4dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="@+id/comment_text"
        app:layout_constraintEnd_toStartOf="@id/comment_text"
        app:layout_constraintTop_toTopOf="@+id/comment_text" />

    <TextView
        android:id="@+id/comment_text"
        style="@style/LikesAndCommentsTexts"
        android:text="@string/comments"
        app:layout_constraintBottom_toBottomOf="@+id/number_of_likes"
        app:layout_constraintEnd_toEndOf="@+id/post_body"
        app:layout_constraintTop_toTopOf="@+id/number_of_likes" />

    <View
        android:id="@+id/top_border_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#EDEDED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_icon" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/like_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:textOff="@string/like"
        android:textOn="@string/like"
        app:layout_constraintEnd_toStartOf="@+id/comment_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_border_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/comment_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:text="@string/comment"
        app:layout_constraintEnd_toStartOf="@+id/share_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/like_button"
        app:layout_constraintTop_toTopOf="@+id/like_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/comment_button"
        app:layout_constraintTop_toTopOf="@+id/comment_button" />

    <View
        android:id="@+id/bottom_border_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#EDEDED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>