<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstimplementation.ui.CommentActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/post_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="30dp"
                        app:layout_constraintBottom_toBottomOf="@+id/time_of_post"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/profile_name">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/profile_image"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/my_image" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/kufre_udoh"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_bio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/software_engineer_at_google"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/profile_name"
                        app:layout_constraintStart_toStartOf="@+id/profile_name"
                        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

                    <TextView
                        android:id="@+id/time_of_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_14h"
                        app:layout_constraintStart_toStartOf="@+id/profile_bio"
                        app:layout_constraintTop_toBottomOf="@+id/profile_bio" />

                    <ImageView
                        android:id="@+id/post_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/post_privacy"
                        app:layout_constraintBottom_toBottomOf="@+id/time_of_post"
                        app:layout_constraintStart_toEndOf="@+id/time_of_post"
                        app:layout_constraintTop_toTopOf="@+id/time_of_post"
                        app:srcCompat="@drawable/ic_baseline_group_work_24" />

                    <TextView
                        android:id="@+id/post_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/post"
                        app:layout_constraintEnd_toEndOf="@+id/profile_bio"
                        app:layout_constraintStart_toStartOf="@+id/cardView"
                        app:layout_constraintTop_toBottomOf="@+id/time_of_post" />

                    <ImageView
                        android:id="@+id/like_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/like_icon"
                        android:src="@drawable/ic_baseline_thumb_up_24"
                        app:layout_constraintStart_toStartOf="@+id/post_body"
                        app:layout_constraintTop_toBottomOf="@+id/post_body" />

                    <TextView
                        android:id="@+id/number_of_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/_25"
                        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
                        app:layout_constraintStart_toEndOf="@+id/like_icon"
                        app:layout_constraintTop_toTopOf="@+id/like_icon" />

                    <TextView
                        android:id="@+id/number_of_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_6_comments"
                        app:layout_constraintBottom_toBottomOf="@+id/number_of_likes"
                        app:layout_constraintEnd_toEndOf="@+id/post_body"
                        app:layout_constraintTop_toTopOf="@+id/number_of_likes" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/like_icon">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/like_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/like"
                            android:textAllCaps="false" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/comment_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/comment"
                            android:textAllCaps="false" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/share_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/share"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/comment_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Comments"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_section" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>